--- a/arts-culture.html
+++ b/arts-culture.html
@@ -31,7 +31,7 @@
             <img src="images/arts1.jpeg">
              <p> Paintings </p> 
             <img src="images/arts4.jpg">
-             <p> Paintings </p> 
+             <p> Line Dancing </p> 
             <div>
             <div class="content">    
                 <p> The history of Spanish and American rule and contact with merchants and traders culminated in a unique blend of Eastern and Western cultures in the Philippines. Filipino American cultural identity has been described as fluid, adopting aspects from various cultures; that said there has not been significant research into the culture of Filipino Americans. Fashion, dance, music, theater and arts have all had roles in building Filipino American cultural identities and communities.</p>
@@ -41,7 +41,7 @@
             <div class="icon">
                <div id="footer" class="cf">
                 <p>
-				Copyright 2017 by FilipinoTown. All Rights reserved. All prices shown are in USD<br>
+				Copyright 2017 by FilipinoTown. All Rights reserved.<br>
 			    </p> 
 			    </div> 
                 <a href='#'><img alt='Facebook' src='http://4.bp.blogspot.com/-oT7cL4u_dVM/UIS8ZW-7iZI/AAAAAAAAIrc/KepM5Y5sfSg/s1600/facebook.png'title='Facebook'/></a>
