--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
             <div class="icon">
                <div id="footer" class="cf">
                 <p>
-				Copyright 2017 by FilipinoTown. All Rights reserved. All prices shown are in USD<br>
+				Copyright 2017 by FilipinoTown. All Rights reserved.<br>
 			    </p> 
 			    </div> 
                 <a href='#'><img alt='Facebook' src='http://4.bp.blogspot.com/-oT7cL4u_dVM/UIS8ZW-7iZI/AAAAAAAAIrc/KepM5Y5sfSg/s1600/facebook.png'title='Facebook'/></a>
