--- a/food.html
+++ b/food.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <!--These are the 4 navigation tab-->
         <ul class="nav">
             <!-- Logo -->
           <div class="logo">
@@ -20,7 +19,7 @@
                     <li><a href="food.html">Food</a></li>
         </ul>
             <div class="banner-text">
-                <h2>Filipino Restaurants in New York</h2>
+                <h2>Filipino Restaurants in FilipinoTown Woodside NY</h2>
             </div>
          <!--  Banner  -->       
           <div class="container"></div>
@@ -29,33 +28,33 @@
              <p> FilipinoTown Restaurant Week - Woodside NY</p>
             <img src="images/food-banner.jpg">
              <<p> Four Course Meal All Filipino Food $25 </p>
-          
+          <!--Thisis the list of restaurants in Woodside Queens-->
            <div>
               <h2>Filipino Town Restaurants in Woodside NY</h2>
            </div>
             <div>
-              <p>Kabayan Restaurant - 49-12 Queens Boulevard Woodside, NY </p>
-              <p>Tito Rad's Grill & Restaurant - 49-10 Queens Boulevard Woodside, NY </p>
-              <p>Ihawan Restaurant - 40-06 70th St Woodside, NY </p>
-              <p>Promdi Restaurant - 6916 Roosevelt Ave. Woodside, NY </p>
-              <p>House of Inasal - 65-14 Roosevelt Ave. Woodside, NY </p>
-              <p>Perlas ng Silangan Restaurant - 69-09 Roosevelt Ave Woodside, NY </p>
-              <p>Renee's Kitchenette & Grill - 6914 Roosevelt Ave Woodside, NY </p>
-              <p>Kabayan II Turo-Turo - 6912 Roosevelt Ave Woodside, NY</p>
-              <p>Fritzie's Bake shop - 69-10 Roosevelt Ave Woodside, NY</p>
-              <p>Baby's Grill & Restaurant - 6828 Roosevelt Ave Woodside, NY</p>
-              <p>Krystal's Cafe & Pastry Shop - 6902 Roosevelt Ave Woodside, NY</p>
-              <p>Red Ribbon Bakeshop - 65-02 Roosevelt Ave, Woodside, NY</p>
-              <p>Jollibee - 62-29 Roosevelt Ave Woodside, NY</p>
-              <p>Engeline's Restaurant & Bake Shop - 5828 Roosevelt Ave Woodside, NY</p>
-              <p>Papa's Kitchen - 65-40 Woodside Ave Woodside NY </p>
+              <p><b>Kabayan Restaurant</b> - 49-12 Queens Boulevard Woodside, NY </p>
+              <p><b>Tito Rad's Grill & Restaurant</b> - 49-10 Queens Boulevard Woodside, NY </p>
+              <p><b>hawan Restaurant</b> - 40-06 70th St Woodside, NY </p>
+              <p><b>Promdi Restaurant</b> - 6916 Roosevelt Ave. Woodside, NY </p>
+              <p><b>House of Inasal</b> - 65-14 Roosevelt Ave. Woodside, NY </p>
+              <p><b>Perlas ng Silangan Restaurant</b> - 69-09 Roosevelt Ave Woodside, NY </p>
+              <p><b>Renee's Kitchenette & Grill</b> - 6914 Roosevelt Ave Woodside, NY </p>
+              <p><b>Kabayan II Turo-Turo</b> - 6912 Roosevelt Ave Woodside, NY</p>
+              <p><b>Fritzie's Bake shop</b> - 69-10 Roosevelt Ave Woodside, NY</p>
+              <p><b>Baby's Grill & Restaurant</b> - 6828 Roosevelt Ave Woodside, NY</p>
+              <p><b>Krystal's Cafe & Pastry Shop</b> - 6902 Roosevelt Ave Woodside, NY</p>
+              <p><b>Red Ribbon Bakeshop</b> - 65-02 Roosevelt Ave, Woodside, NY</p>
+              <p><b>Jollibee</b> - 62-29 Roosevelt Ave Woodside, NY</p>
+              <p><b>Engeline's Restaurant & Bake Shop</b> - 5828 Roosevelt Ave Woodside, NY</p>
+              <p><b>Papa's Kitchen</b> - 65-40 Woodside Ave Woodside NY </p>
            </div>
             <!--Three social media pages link-->
             <footer>
             <div class="icon">
                <div id="footer" class="cf">
                 <p>
-				Copyright 2017 by FilipinoTown. All Rights reserved. All prices shown are in USD<br>
+				Copyright 2017 by FilipinoTown. All Rights reserved.<br>
 			    </p> 
 			    </div> 
                 <a href='#'><img alt='Facebook' src='http://4.bp.blogspot.com/-oT7cL4u_dVM/UIS8ZW-7iZI/AAAAAAAAIrc/KepM5Y5sfSg/s1600/facebook.png'title='Facebook'/></a>
